@startuml engine_resolution_flow
title Engine Resolution -- Class Structure, Dependencies, and Fix

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype polyline
skinparam BackgroundColor white
skinparam classBackgroundColor #fafafa
skinparam noteBackgroundColor #fffbe6

' ============================================================
' API layer
' ============================================================
package "api.routers" <<Frame>> {
    class RenderGroupsRouter <<router>> {
        + confirm_upload(group_id, payload)
        + rerender(group_id, payload)
    }
    class JobsRouter <<router>> {
        + agent_failure(job_id, error)
        + register_outputs(job_id, files)
    }
}

' ============================================================
' Service layer
' ============================================================
package "services.render_groups" <<Frame>> {
    class RenderGroupService {
        + confirm_upload(group_id, payload)
        + rerender(group_id, payload, user)
    }

    class engine_from_snapshot <<helper_fn>> {
        + (snapshot) : str or None
    }

    note right of RenderGroupService
        FIX #1 -- write site
        ----
        engine = override.render.engine
                 OR engine_from_snapshot(snapshot)
        if not engine: raise 400
        render_overrides["render"]["engine"] = engine
        json.dumps(render_overrides)
            -> persisted into
               render_groups.render_overrides_json
               AND every job row's copy
    end note
}

' ============================================================
' Orchestrator layer
' ============================================================
package "orchestrator" <<Frame>> {
    class RenderOrchestrator <<facade>> {
        + plan(engine, ...) : list of PlannedTask
        + execute(render_overrides_json, ...)
        + on_job_failed(job_id, error)
        + on_job_succeeded(job_id)
    }

    class RenderLifecycle {
        + plan(engine, ...) : list of PlannedTask
        + start_render(render_overrides_json, ...)
        + handle_chunk_failed(job_id, error)
        - _try_dispatch_retry(job_id, error) : bool
        - _load_group_dispatch_context(grp) : tuple
    }

    class DispatchCoordinator {
        + enqueue_and_flush(group_id, tasks, ctx)
        - _dispatch_one(item) : DispatchResult
    }

    note left of RenderLifecycle
        FIX #2 -- read-side fallback
        ----
        _load_group_dispatch_context(grp):
        1. read render_overrides_json.render.engine
        2. if engine is None:
             read analysis_snapshot_json
                  .heaviness.render_engine
        ----
        Step 2 covers rows submitted
        before FIX #1 landed.
    end note
}

' ============================================================
' Allocation layer
' ============================================================
package "orchestrator.allocation" <<Frame>> {
    interface FrameAllocator <<protocol>> {
        + allocate(...)
        + allocate_retry(chunk_request, resources)
    }

    class DefaultAllocationStrategy
    class EconomyAllocationStrategy
    class FastRenderAllocationStrategy

    DefaultAllocationStrategy     ..|> FrameAllocator
    EconomyAllocationStrategy     ..|> FrameAllocator
    FastRenderAllocationStrategy  ..|> FrameAllocator

    class ChunkRequest <<dataclass>> {
        + group_id : str
        + chunk_index : int
        + frame_start : int
        + frame_end : int
        + frame_step : int
        + total_frames : int
        + attempt : int
        + excluded_machine_ids
        + excluded_serverless_capabilities
        + file_size_bytes : int or None
        + engine : str or None
    }

    class ValidationContext <<dataclass>> {
        + engine : str or None
    }

    interface TargetValidator <<protocol>> {
        + is_valid(target, ctx) : bool
    }

    class EngineCompatibilityValidator {
        + is_valid(target, ctx) : bool
    }
    EngineCompatibilityValidator ..|> TargetValidator

    note right of EngineCompatibilityValidator
        Strict: raises ValueError
        when ctx.engine is None.
        FIX #1 + FIX #2 ensure
        ctx.engine is always set
        on initial dispatch AND retry.
    end note
}

' ============================================================
' Persistence
' ============================================================
package "repositories" <<Frame>> {
    class RenderGroupRepository {
        --table render_groups columns--
        + render_overrides_json : TEXT
        + analysis_snapshot_json : TEXT
        + tier : TEXT
        + r2_input_size_bytes : BIGINT
        --methods--
        + get_by_id(group_id)
        + full_update(group_id, ...)
    }

    class JobRepository {
        --table jobs columns--
        + render_overrides_json : TEXT
        + status : TEXT
        + machine_type : TEXT
        --methods--
        + create(params)
        + get_raw_by_id(job_id)
        + mark_done(job_id)
        + mark_failed(job_id, error)
    }
}

' ============================================================
' Relationships
' ============================================================

' Routing
RenderGroupsRouter      --> RenderGroupService    : delegates HTTP
JobsRouter              --> RenderOrchestrator    : routes callbacks

' Service
RenderGroupService      ..> engine_from_snapshot  : resolves engine
RenderGroupService      --> RenderOrchestrator    : plan() + execute()
RenderGroupService      --> RenderGroupRepository : reads + writes group

' Orchestrator composition
RenderOrchestrator      *-- RenderLifecycle       : facades
RenderLifecycle         *-- DispatchCoordinator   : enqueues + drains

' Lifecycle
RenderLifecycle         --> RenderGroupRepository : reads on retry
RenderLifecycle         --> JobRepository         : terminal writes
RenderLifecycle         ..> ChunkRequest          : builds for retry
RenderLifecycle         ..> FrameAllocator        : allocate_retry

' Allocation
DispatchCoordinator     ..> FrameAllocator        : initial allocate
FrameAllocator          ..> ValidationContext     : per-allocation ctx
FrameAllocator          ..> TargetValidator       : filter targets

EngineCompatibilityValidator ..> ValidationContext : reads ctx.engine
ChunkRequest                 ..> ValidationContext : engine flows from

' ============================================================
' Summary box
' ============================================================
note as Summary #ddffdd
  Bug (before fix):
  ----
  Engine resolved at confirm_upload but never written back into
  render_overrides. Saved JSON had no engine. Initial dispatch
  worked because engine was passed as a direct local arg to
  plan(). Retry failed because it had to re-load engine from the
  saved JSON (which had none) and the strict validator raised.

  Fix (now in place):
  ----
  FIX #1 (write site, services.render_groups):
    persist engine into render_overrides BEFORE serializing.
    New rows are self-healing.

  FIX #2 (read fallback, orchestrator.lifecycle):
    if render_overrides_json has no engine, read it from
    analysis_snapshot_json instead. Same logic the worker
    uses. Covers rows submitted before FIX #1.

  Net: validator stays strict, both flows always have engine,
  no defensive code anywhere downstream of the boundary.
end note

@enduml
